--- a/resources/assets/steamcraft/lang/en_US.lang
+++ b/resources/assets/steamcraft/lang/en_US.lang
@@ -9,20 +9,26 @@ item.steamcraft:spyglass.name=Spyglass
 
 item.steamcraft:ingot.0.name=Copper Ingot
 item.steamcraft:ingot.1.name=Zinc Ingot
+item.steamcraft:ingot.2.name=Brass Ingot
 
 item.steamcraft:nugget.0.name=Copper Nugget
 item.steamcraft:nugget.1.name=Zinc Nugget
 item.steamcraft:nugget.2.name=Iron Nugget
+item.steamcraft:nugget.3.name=Brass Nugget
 
 item.steamcraft:plate.0.name=Copper Plate
 item.steamcraft:plate.1.name=Zinc Plate
 item.steamcraft:plate.2.name=Iron Plate
 item.steamcraft:plate.3.name=Gold Plate
+item.steamcraft:plate.4.name=Brass Plate
 
 item.steamcraft:ingotMold.name=Ingot Mold
 item.steamcraft:nuggetMold.name=Nugget Mold
 item.steamcraft:plateMold.name=Plate Mold
 
 tile.steamcraft:crucible.name=Crucible
+tile.steamcraft:mold.name=Mold
+tile.steamcraft:pipe.name=Pipe
+tile.steamcraft:boiler.name=Boiler
 tile.steamcraft:ore.0.name=Copper Ore
 tile.steamcraft:ore.1.name=Zinc Ore
