--- a/resources/assets/steamcraft/lang/en_US.lang
+++ b/resources/assets/steamcraft/lang/en_US.lang
@@ -27,7 +27,7 @@ category.SteamPower.name=Steam Power
 research.Boiler.name=Boiler
 research.Boiler.0=I have made a device that allows for the production of gaseous water, steam. If I insert water and fuel, steam will be produced.<br>This steam can then be piped out the top.
 research.Tank.name=Tanks
-research.Tank.0=
+research.Tank.0=Feels like i'm wasting precious steam... pipes are great for transfering it, but i have grown weary of refilling the boiler when I am in need of steam. For this I have created a tank, allowing me to store steam for a later use.
 research.Pipe.name=Pipes
 research.Pipe.0=Brass makes the perfect conduit for carrying steam. Not sure what else to write here.
 research.Heater.name=Steam Heater
