A lot of things

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -92,11 +92,17 @@ item.steamcraft:swordBrass.name=Brass Sword
 
 item.steamcraft:steamDrill.name=Steam Drill
 item.steamcraft:steamAxe.name=Steam Axe
+item.steamcraft:astrolabe.name=Astrolabe
 
 item.steamcraft:powerFist.name=Power Fist
 item.steamcraft:jetpack.name=Steam Jetpack
 item.steamcraft:goggleUpgrade.name=Mask of Revealing
 item.steamcraft:floralLaurel.name=Floral Laurel
+
+item.steamcraft:steamedChicken.name=Steamed Chicken
+item.steamcraft:steamedBeef.name=Steamed Beef
+item.steamcraft:steamedFish.name=Steamed Fish
+item.steamcraft:steamedPorkchop.name=Steamed Porkchop
 
 tile.steamcraft:blockBrass.name=Brass Block
 tile.steamcraft:charger.name=Steam Filler
@@ -113,3 +119,4 @@ tile.steamcraft:tank.0.name=Steam Tank
 tile.steamcraft:tank.1.name=Creative Steam Tank
 tile.steamcraft:meter.name=Steam Gauge
 tile.steamcraft:hammer.name=Steam Hammer
+tile.steamcraft:itemMortar.name=Item Mortar
