Pushing changes, haven't done this in a while XD

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -35,6 +35,8 @@ research.Heater.0=Now I can power furnaces using steam power, using this nifty s
 research.Charger.name=Steam Filler
 research.Charger.0=
 
+category.Exosuit.name=Exosuit
+
 itemGroup.steamcraft=FSM
 itemGroup.steamcraftTools=FSM Tools
 steamcraft.enhancementText=Enhancements:
