--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -1,12 +1,18 @@
 steamcraft.book.index=Index
 steamcraft.book.info=A brief guide to steam power.
+steamcraft.book.by=by
+steamcraft.book.shapeless=Shapeless
 item.steamcraft:book.name=Esteemed Innovation
 
 category.Basics.name=Basics
 research.Ores.name=Ores
-research.Ores.0=While delving into the depths of this world, I've found many deposits of zinc and copper.<br>These rather curious metals have no obvious special uses, but I am sure that I will be able to find useful for them in the future.
+research.Ores.0=While delving into the depths of this world, I've found many deposits of zinc and copper.<br>These rather curious metals have no obvious special uses, but I am sure that I will be able to find uses for them in the future.
 research.Book.name=Preface
-research.Book.0=I have decided to delve into the fantastical world of steam technology. I created this spiffy journal to record my exciting discoveries.<br>Any time I stumble upon something new, I'll jot it down, lest I need later.
+research.Book.0=I have decided to delve into the fantastical world of steam technology. I created this spiffy journal to record my exciting discoveries.<br>Any time I stumble upon something new, I'll jot it down, lest I need it later.
+research.Bits.name=Bits and Bobs
+research.Bits.0=Here I will document various components I may need for crafting.<br>Plating a piston assembly with brass increases durability and makes it useful for applications within steam apparatus.
+research.Spyglass.name=Spyglass
+research.Spyglass.0=Who knew a few glass lenses in a brass housing could work as a magnifier? Now I can spot loot from a mile away!<br>Holding this device and pressing right click will zoom in, left clicking will zoom out.
 
 research.Plates.name=Plates
 research.Plates.0=Using my new metal casting apparatus, I have devised a way to use metals more efficiently. I am able to cast metal plates at a fraction of the cost of an ingot, and these plates may be used in place of ingots in many instances.
@@ -29,14 +35,45 @@ research.Boiler.0=I have made a device that allows for the production of gaseous
 research.Tank.name=Tanks
 research.Tank.0=Pipes are great for transporting steam, but I've grown weary of refilling the boiler every time I need more. I've created tanks to remedy this problem. They store large amounts of steam, so I can save some for later.
 research.Pipe.name=Pipes
-research.Pipe.0=Brass makes the perfect conduit for carrying steam. Not sure what else to write here.
+research.Pipe.0=Steam is useless without a way to move it about but I've struggled to find a way to move it effectively.<br>Brass pipes are able to resist corrosion and thus make the perfect conduit for steam.
+research.Pipe.1=Combining a lever with a pipe allows me to toggle the flow of steam. Right clicking on this valve pipe will open or close the valve.<br>I can also control the valve using redstone. Changing the redstone polarity will turn the valve.
+research.Gauge.name=Steam Gauge
+research.Gauge.0=I've created a simple method for measuring steam within a conduit. I can simply slap on one of these to a boiler, pipe, tank, or other device and it will visually display the pressure.
 research.Heater.name=Steam Heater
-research.Heater.0=Now I can power furnaces using steam power, using this nifty steam heater. <br>Steam heats the copper coils and allows a furnace to smelt, at a more efficient but slower rate than with solid fuels.
-research.Charger.name=Steam Filler
-research.Charger.0=
+research.Heater.0=Now I can power furnaces using steam power, using this nifty steam heater. <br>Steam heats the copper coils and allows a furnace to smelt without fuel. More heaters will smelt faster but use more steam.
+research.Filler.name=Steam Filler
+research.Filler.0=Pipes are great for transporting steam to fixed machines, but they're not much good to supply power to tools or armor. That's where the steam filler comes in.<br>Simply place in a steam-using device and wait.
+research.ItemMortar.name=Item Mortar
+research.ItemMortar.0=I've found an ingenius way to transport items - a pressurized steam cannon!<br>This mortar will launch items skyward, at a high trajectory, to land at a targeted location.
+research.ItemMortar.1=Simply insert items via a hopper, set a target, and watch items fly.<br>An astrolabe is my device of choice for aiming the mortar. First, I have to shift-right click on the targeted location with an astrolabe, and then right click on the mortar to calibrate it.
+research.Hammer.name=Steam Hammer
+research.Hammer.0=I've created an interesting invention - a steam hammer - that allows me to perform anvil actions using steam instead of experience.<br>I first place the hammer above an anvil.
+research.Hammer.1=Right clicking the hammer will open its interface, where I can set up what I want the hammer to do. After I set up the action I want done, I simply insert steam and wait for the repairs or renaming to finish.
 
 category.Exosuit.name=Exosuit
+research.Exosuit.name=Exosuit
+research.Exosuit.0=I've been able to manipulate the world to my desire using the power of steam... What left is there to improve but me?<br>This is where my exosuit comes in, a versatile armor set powered by steam.
+research.Exosuit.1=Upgrades can be placed in the suit using an engineering table. First things first, I need to place a steam tank in the cuboid shaped slot in the exosuit chestpiece. I then can fill the chestpiece with steam.<br>A full set of exosuit parts will provide a small mining and speed boost, but without steam I will be slowed.
+research.Jetpack.name=Steam Jetpack
+research.Jetpack.0=I've developed a rather exciting exosuit upgrade that grants me the power of flight.<br>This steam 'jetpack' of sorts consumes a substantial amount of steam, but you can't put a price tag on flight.
+research.Wings.name=Steam Wings
+research.Wings.0=Now I can glide like a chicken, at no steam cost!<br>This steam powered chestpiece upgrade will deploy when I start falling too fast to slow my fall, but this can be disabled by hitting shift.
+research.Fist.name=Power Fist
+research.Fist.0=This chestpiece upgrade is one of my more fun inventions. It makes my punches pack a real... punch.<br>Any time I punch an enemy with a bare fist they'll go flying, at the cost of some steam.
+research.FallAssist.name=Fall Assist
+research.FallAssist.0=This footpiece upgrade is a necessity if I'm going to be exploring dangerous terrain. It uses steam to lower fall damage taken from long drops.
+research.Mask.name=Mask of Revealing
+research.Mask.0=Who says thaumaturgy can't mix with technology? Not I! I've developed a snazzy mask that gives my exosuit the same properties as the goggles of revealing.
 
+category.Flintlock.name=Flintlock Weapons
+research.Parts.name=Weapon Parts
+research.Parts.0=Flintlock weapons are extremely intricate devices, and I'll need to craft some complex devices in order to make them. This section details exactly how to do that.
+research.Musket.name=Flintlock Musket
+research.Musket.0=I have found a way to harness the power of fire to make an efficient killing machine: the musket. This device requires reloading between every shot, using musket cartridges as ammunition. Hold right click to reload and to aim.
+research.Blunderbuss.name=Flintlock Blunderbuss
+research.Blunderbuss.0=Using a larger brass barrel with modified musket mechanisms makes for an interesting combination, I call it a blunderbuss. This device shoots multiple inaccurate shots at once, allowing me to hit many foes.
+research.Pistol.name=Flintlock Pistol
+research.Pistol.0=I've found a way to shrink down my musket to a more manageable size, that can be armed faster. Of course, the smaller barrel means decreased damage and accuracy, but the increased speed is worth it.
 itemGroup.steamcraft=FSM
 itemGroup.steamcraftTools=FSM Tools
 steamcraft.enhancementText=Enhancements:
@@ -68,6 +105,12 @@ item.steamcraft:nugget.1.name=Zinc Nugget
 item.steamcraft:nugget.2.name=Iron Nugget
 item.steamcraft:nugget.3.name=Brass Nugget
 
+item.steamcraft:crafting.0.name=Brass Piston
+item.steamcraft:crafting.1.name=Wooden Stock
+item.steamcraft:crafting.2.name=Iron Barrel
+item.steamcraft:crafting.3.name=Blunderbuss Barrel
+item.steamcraft:crafting.4.name=Flintlock
+
 item.steamcraft:plate.0.name=Copper Plate
 item.steamcraft:plate.1.name=Zinc Plate
 item.steamcraft:plate.2.name=Iron Plate
@@ -97,7 +140,9 @@ item.steamcraft:steamAxe.name=Steam Axe
 item.steamcraft:astrolabe.name=Astrolabe
 
 item.steamcraft:powerFist.name=Power Fist
+item.steamcraft:fallAssist.name=Fall Assist
 item.steamcraft:jetpack.name=Steam Jetpack
+item.steamcraft:wings.name=Steam Wings
 item.steamcraft:goggleUpgrade.name=Mask of Revealing
 item.steamcraft:floralLaurel.name=Floral Laurel
 
@@ -111,6 +156,7 @@ tile.steamcraft:charger.name=Steam Filler
 tile.steamcraft:crucible.name=Crucible
 tile.steamcraft:mold.name=Mold
 tile.steamcraft:pipe.name=Pipe
+tile.steamcraft:valvePipe.name=Valve Pipe
 tile.steamcraft:boiler.name=Boiler
 tile.steamcraft:heater.name=Steam Heater
 tile.steamcraft:ore.0.name=Copper Ore
