lang file edited to match new unlocalized names for smashed ores

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -129,18 +129,18 @@ item.steamcraft:nugget.1.name=Zinc Nugget
 item.steamcraft:nugget.2.name=Iron Nugget
 item.steamcraft:nugget.3.name=Brass Nugget
 
-item.steamcraft:smashedOre.iron.name=Smashed Iron Ore
-item.steamcraft:smashedOre.gold.name=Smashed Gold Ore
-item.steamcraft:smashedOre.copper.name=Smashed Copper Ore
-item.steamcraft:smashedOre.zinc.name=Smashed Zinc Ore
-item.steamcraft:smashedOre.tin.name=Smashed Tin Ore
-item.steamcraft:smashedOre.nickel.name=Smashed Nickel Ore
-item.steamcraft:smashedOre.silver.name=Smashed Silver Ore
-item.steamcraft:smashedOre.lead.name=Smashed Lead Ore
-item.steamcraft:smashedOre.aluminum.name=Smashed Aluminum Ore
-item.steamcraft:smashedOre.osmium.name=Smashed Osmium Ore
-item.steamcraft:smashedOre.cobalt.name=Smashed Cobalt Ore
-item.steamcraft:smashedOre.ardite.name=Smashed Ardite Ore
+item.steamcraft:smashedOre.Iron.name=Smashed Iron Ore
+item.steamcraft:smashedOre.Gold.name=Smashed Gold Ore
+item.steamcraft:smashedOre.Copper.name=Smashed Copper Ore
+item.steamcraft:smashedOre.Zinc.name=Smashed Zinc Ore
+item.steamcraft:smashedOre.Tin.name=Smashed Tin Ore
+item.steamcraft:smashedOre.Nickel.name=Smashed Nickel Ore
+item.steamcraft:smashedOre.Silver.name=Smashed Silver Ore
+item.steamcraft:smashedOre.Lead.name=Smashed Lead Ore
+item.steamcraft:smashedOre.Aluminum.name=Smashed Aluminum Ore
+item.steamcraft:smashedOre.Osmium.name=Smashed Osmium Ore
+item.steamcraft:smashedOre.Cobalt.name=Smashed Cobalt Ore
+item.steamcraft:smashedOre.Ardite.name=Smashed Ardite Ore
 
 item.steamcraft:crafting.0.name=Brass Piston
 item.steamcraft:crafting.1.name=Wooden Stock
