Flash boiler textures and changed mechanics

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -236,4 +236,4 @@ tile.steamcraft:itemMortar.name=Item Mortar
 tile.steamcraft:pump.name=Archimedes Screw
 tile.steamcraft:smasher.name=Rock Smasher
 tile.steamcraft:thumper.name=Thumper
-
+tile.steamcraft:flashBoiler.name=Flash Boiler Component
